<resources>
    <string name="app_name">GreenearTech</string>

    <string name="usesrname">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_sucess">登录成功！</string>
    <string name="login_fail">登录失败！</string>
    <string name="registr">注册</string>
    <string name="registr_success">注册成功！</string>
    <string name="registr_fail">注册失败！</string>
    <string name="remember_password">记住密码</string>
    <string name="error">用户名和密码不能为空</string>
    <string name="success">保存成功</string>
    <string name="fail">保存失败</string>

    <string name="bms_id">BMS ID</string>
    <string name="bms_soc">BMS SOC信息</string>
    <string name="bms_soh">BMS SOH信息</string>
    <string name="bms_vol">BMS 电池电压信息</string>
    <string name="bms_res">BMS 内阻信息</string>
    <string name="bms_temp">BMS 环境温度</string>
    <string name="bms_current">BMS 电池电流</string>
    <string name="bms_charge">BMS 充放电状态</string>

    <string name="bat_id">BAT ID</string>
    <string name="bat_soc">BAT SOC信息</string>
    <string name="bat_soh">BAT SOH信息</string>
    <string name="bat_vol">BAT 电池电压信息</string>
    <string name="bat_res">BAT 电池电阻信息</string>

    <string name="user_bms_id">User Bms ID</string>
    <string name="user_bat_id_1">User Bat1 ID</string>
    <string name="user_bat_id_2">User Bat2 ID</string>
    <string name="user_bat_id_3">User Bat3 ID</string>
    <string name="user_bat_id_4">User Bat4 ID</string>

    //WelcomeActivity
    <string name="welcome_title">GreenearTech</string>

    //BD_GuidActivity
    <string name="start_navi">进入导航</string>
    <string name="finish_navi">导航结束</string>

    <string name="total_cg_num">总充电桩数目 :</string>
    <string name="avialable_cg_num">可用充电桩数目 :</string>

    <string name="Battery_Chart">电池各项数据</string>
    <string name="Battery_Volt">电池电压信息</string>
    <string name="Battery_Soh">电池SOH信息</string>
    <string name="Battery_Soc">电池SOC信息</string>
    
    <string name="Search_specific_location_chargingStation">请输入你想搜索充电桩的位置</string>
    <string name="Search">搜索</string>
    <string name="cancel">取消</string>

</resources>
